--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@ table { border-collapse: collapse; width: 100%; }
 img { max-width: 100%; vertical-align: middle; }
 button { border: none; background: none; cursor: pointer; font-size: 100%; }
 
+#ourgallery, #aboutus, #cheftmenu, #roadmap #reservation {
+    margin-top: 500px;
+}
 #nav {
     background: #85665c;
     position: fixed;
